Feature/change card (#350)
* [remove] backgroundDirection

* [add] 카드 배경 흰색 추가

* [remove] default 데이터 제거

* [change] 변경사항에 따른 스토리 수정

* [change] props style guide에 따라 수정

* [change] class명 수정

* [change] Card -> EduCard

* [change] class명 변경

--- a/stories/Card/Card.stories.mdx
+++ b/stories/Card/Card.stories.mdx
@@ -1,108 +1,99 @@
 import { ArgsTable, Meta, Story, Canvas } from "@storybook/addon-docs/blocks";
-import Card, {
-  CardBackgroundDirections,
-} from "@/src/Components/DataDisplay/Card";
+import EduCard from "@/src/Components/DataDisplay/EduCard";
 import Grid from "@/src/Components/Layout/Grid";
 import Row from "@/src/Components/Layout/Row";
 import StyleCol from "@/src/Components/Layout/StyleCol";
 
 <Meta
-  title="Data Display/Card"
-  component={Card}
-  argTypes={{
-    backgroundImage: {
-      description: "카드 배경<br/>`String`",
-      table: {
-        type: {
-          summary: null,
+    title="Data Display/EduCard"
+    component={EduCard}
+    argTypes={{
+        backgroundImage: {
+            description: "카드 배경<br/>`String`",
+            defaultValue: "https://cdn.comento.kr/edu/title_OUZVTI7e2c.jpg",
+            table: {
+                type: {
+                    summary: null,
+                },
+            },
+            control: {
+                type: "text",
+            },
         },
-      },
-      control: {
-        type: "text",
-      },
-    },
-    backgroundDirection: {
-      description: "카드 배경 방향<br/>`String`",
-      table: {
-        type: {
-          summary: null,
+        category: {
+            description: "캠프 카테고리<br/>`String`",
+            defaultValue: "category",
+            table: {
+                type: {
+                    summary: null,
+                },
+            },
+            control: {
+                type: "text",
+            },
         },
-      },
-      control: {
-        type: "select",
-        options: CardBackgroundDirections,
-      },
-    },
-    category: {
-      description: "캠프 카테고리<br/>`String`",
-      table: {
-        type: {
-          summary: null,
+        title: {
+            description: "캠프 제목<br/>`String`",
+            defaultValue: "title",
+            table: {
+                type: {
+                    summary: null,
+                },
+            },
+            control: {
+                type: "text",
+            },
         },
-      },
-      control: {
-        type: "text",
-      },
-    },
-    title: {
-      description: "캠프 제목<br/>`String`",
-      table: {
-        type: {
-          summary: null,
+        captionLeft: {
+            description: "좌측 캡션<br/>`String`",
+            defaultValue: "captionLeft",
+            table: {
+                type: {
+                    summary: null,
+                },
+            },
+            control: {
+                type: "text",
+            },
         },
-      },
-      control: {
-        type: "text",
-      },
-    },
-    captionLeft: {
-      description: "좌측 캡션<br/>`String`",
-      table: {
-        type: {
-          summary: null,
+        captionRight: {
+            description: "우측 캡션<br/>`String`",
+            defaultValue: "captionRight",
+            table: {
+                type: {
+                    summary: null,
+                },
+            },
+            control: {
+                type: "text",
+            },
         },
-      },
-      control: {
-        type: "text",
-      },
-    },
-    captionRight: {
-      description: "우측 캡션<br/>`String`",
-      table: {
-        type: {
-          summary: null,
-        },
-      },
-      control: {
-        type: "text",
-      },
-    },
-  }}
+    }}
 />
 
 export const Default = (args, { argTypes }) => ({
-  props: Object.keys(argTypes),
-  components: { Grid, Row, StyleCol, Card },
-  template: `
+    props: Object.keys(argTypes),
+    components: { Grid, Row, StyleCol, EduCard },
+    template: `
         <Grid>
             <Row>
                 <StyleCol :col-lg="4">
-                    <Card :backgroundImage="backgroundImage" :backgroundDirection="backgroundDirection" :category="category" :title="title" :captionLeft="captionLeft" :captionRight="captionRight"/>
+                    <EduCard :background-image="backgroundImage" :category="category" :title="title" :caption-left="captionLeft" :caption-right="captionRight"/>
                 </StyleCol>
                 <StyleCol :col-lg="4">
-                    <Card :backgroundImage="backgroundImage" :backgroundDirection="backgroundDirection" :category="category" :title="title" :captionLeft="captionLeft" :captionRight="captionRight"/>
+                    <EduCard :background-image="backgroundImage" :category="category" :title="title" :caption-left="captionLeft" :caption-right="captionRight"/>
                 </StyleCol>
                 <StyleCol :col-lg="4">
-                    <Card :backgroundImage="backgroundImage" :backgroundDirection="backgroundDirection" :category="category" :title="title" :captionLeft="captionLeft" :captionRight="captionRight"/>
+                    <EduCard :background-image="backgroundImage" :category="category" :title="title" :caption-left="captionLeft" :caption-right="captionRight"/>
                 </StyleCol>
             </Row>
         </Grid>
         `,
 });
 
-# Card
+# EduCard
 
-**Card** 컴포넌트의 문서입니다.
+**EduCard** 컴포넌트의 문서입니다.
 
 <Story name="Default">{Default.bind({})}</Story>
 
@@ -113,24 +104,30 @@ export const Default = (args, { argTypes }) => ({
 ### All
 
 <Canvas>
-  <Story name="All">
-    {{
-      template: `
+    <Story name="All">
+        {{
+            data() {
+                return {
+                    exampleBackgroundImage:
+                        "https://cdn.comento.kr/edu/title_OUZVTI7e2c.jpg",
+                };
+            },
+            template: `
                 <Grid>
                     <Row>
                         <StyleCol :col-lg="4">
-                            <Card/>
+                            <EduCard :background-image="exampleBackgroundImage" category="category" title="title" caption-left="captionLeft" caption-right="captionRight"/>
                         </StyleCol>
                         <StyleCol :col-lg="4">
-                            <Card/>
+                            <EduCard :background-image="exampleBackgroundImage" category="category" title="title" caption-left="captionLeft" caption-right="captionRight"/>
                         </StyleCol>
                         <StyleCol :col-lg="4">
-                            <Card/>
+                            <EduCard :background-image="exampleBackgroundImage" category="category" title="title" caption-left="captionLeft" caption-right="captionRight"/>
                         </StyleCol>
                     </Row>
                 </Grid>
             `,
-      components: { Grid, Row, StyleCol, Card },
-    }}
-  </Story>
+            components: { Grid, Row, StyleCol, EduCard },
+        }}
+    </Story>
 </Canvas>
