[fix] 초기 렌더링 시 object option을 가지고 있어도 select를 하기 전 value 그대로 노출되는 이슈 해결

--- a/stories/DataEntry/Select.stories.mdx
+++ b/stories/DataEntry/Select.stories.mdx
@@ -101,8 +101,8 @@ export const Default = (args, { argTypes }) => ({
     <Story name="Direction" height="300px">
         {{
             data: () => ({
-                select1: '',
-                select2: '',
+                select1: 1,
+                select2: 1,
                 options1: [{label: '라벨1', value: 1}, {label: '라벨2', value: 2}],
                 options2: [1, 2],
             }),
