[add] icon-export-medium-line

--- a/stories/Icon/Icon.stories.mdx
+++ b/stories/Icon/Icon.stories.mdx
@@ -130,6 +130,7 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper name=IconCouponMediumLine></IconWrapper>
                             <IconWrapper name=IconRevertMediumLine></IconWrapper>
                             <IconWrapper name=IconDownloadMediumLine></IconWrapper>
+                            <IconWrapper name=IconExportMediumLine></IconWrapper>
                         </div>
                     </div>
                     <!--large-->
