--- a/stories/DataEntry/Select.stories.mdx
+++ b/stories/DataEntry/Select.stories.mdx
@@ -103,7 +103,7 @@ export const Default = (args, { argTypes }) => ({
             data: () => ({
                 select1: 1,
                 select2: 1,
-                options1: [{label: '라벨1', value: 1}, {label: '라벨2', value: 2}],
+                options1: [{label: '라벨1', value: 1}, {label: '라벨2', value: 2, icon: 'IconExportMediumLine'}],
                 options2: [1, 2],
             }),
             template: `
