--- a/stories/Icon/Icon.stories.mdx
+++ b/stories/Icon/Icon.stories.mdx
@@ -184,6 +184,7 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper name=IconAnswerXLargeLine></IconWrapper>
                             <IconWrapper name=IconMegaphoneXLargeLine></IconWrapper>
                             <IconWrapper name=IconCheckXLargeFill></IconWrapper>
+                            <IconWrapper name=IconUnCheckedXLargeFill></IconWrapper>
                         </div>
                     </div>
                     <!--2x-large-->
